使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOsif7zNqg2ujoORRXqLJJi",
+      "authorship_tag": "ABX9TyNtjDAyzkfYfvfzmaE1f4ku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,22 +30,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "16IXUb4NLIvw",
-        "outputId": "8e998ca6-f679-4e96-a874-953a5d26b599"
+        "outputId": "236127f8-44b3-443e-9c98-707b63f28399"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[0.2720, 0.4187, 0.4593],\n",
-            "        [0.8361, 0.0019, 0.2021]])\n",
-            "torch.Size([2, 3])\n"
+            "tensor([0, 1, 2, 3])\n",
+            "tensor([False,  True,  True,  True])\n",
+            "tensor([0, 1, 2, 3], dtype=torch.int16)\n",
+            "tensor([0, 1, 2, 3], dtype=torch.int32)\n",
+            "tensor([0, 1, 2, 3])\n"
           ]
         }
       ],
@@ -83,10 +85,37 @@
         "# print(eye_tensor.shape)\n",
         "\n",
         "# 可以用0-1的随机数来创建tensor对象\n",
-        "rnd_tensor = torch.rand(2,3)\n",
-        "print(rnd_tensor)\n",
-        "print(rnd_tensor.shape)"
+        "# rnd_tensor = torch.rand(2,3)\n",
+        "# print(rnd_tensor)\n",
+        "# print(rnd_tensor.shape)\n",
+        "\n",
+        "# 还可以使用arange函数来创建\n",
+        "# a_tensor = torch.arange(start=0,end=5,step=1)\n",
+        "# print(a_tensor)\n",
+        "# print(a_tensor.shape)\n",
+        "\n",
+        "# 还可以使用linspace函数来创建tensor\n",
+        "# l_tensor = torch.linspace(start=0.1,end=1,steps=10)\n",
+        "# print(l_tensor)\n",
+        "# print(l_tensor.shape)\n",
+        "\n",
+        "# tensor转化为其他数据类型\n",
+        "tensor1 = torch.arange(4)\n",
+        "print(tensor1)\n",
+        "print(tensor1.bool()) # 转化为布尔类型\n",
+        "print(tensor1.short()) # 转化为短整型\n",
+        "print(tensor1.int()) # 转化为整型\n",
+        "print(tensor1.long())"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VY8CKr32kATV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
