使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNtjDAyzkfYfvfzmaE1f4ku",
+      "authorship_tag": "ABX9TyMRdQ1eNo76VDdNKFqQlLnF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "16IXUb4NLIvw",
-        "outputId": "236127f8-44b3-443e-9c98-707b63f28399"
+        "outputId": "f5f22231-ad2c-45c9-8418-31de90ead421"
       },
       "outputs": [
         {
@@ -47,7 +47,10 @@
             "tensor([False,  True,  True,  True])\n",
             "tensor([0, 1, 2, 3], dtype=torch.int16)\n",
             "tensor([0, 1, 2, 3], dtype=torch.int32)\n",
-            "tensor([0, 1, 2, 3])\n"
+            "tensor([0, 1, 2, 3])\n",
+            "tensor([0., 1., 2., 3.], dtype=torch.float16)\n",
+            "tensor([0., 1., 2., 3.])\n",
+            "tensor([0., 1., 2., 3.], dtype=torch.float64)\n"
           ]
         }
       ],
@@ -105,7 +108,147 @@
         "print(tensor1.bool()) # 转化为布尔类型\n",
         "print(tensor1.short()) # 转化为短整型\n",
         "print(tensor1.int()) # 转化为整型\n",
-        "print(tensor1.long())"
+        "print(tensor1.long()) # 转化为长整型\n",
+        "\n",
+        "print(tensor1.half()) # 转化为半精度浮点型 float16\n",
+        "print(tensor1.float()) # 转化为单精度浮点型 float32\n",
+        "print(tensor1.double()) # 转化为双精度浮点型 float64s"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ndarray=>tensor以及tensor->ndarray\n",
+        "import numpy as np\n",
+        "arr = np.zeros((5,5))\n",
+        "#ndarray=>tensor\n",
+        "tensor = torch.from_numpy(arr)\n",
+        "print(tensor)\n",
+        "print(type(tensor))\n",
+        "\n",
+        "#tensor->ndarray\n",
+        "arr2 = tensor.numpy()\n",
+        "print(arr2)\n",
+        "print(type(arr2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oFvEs8zRcKDn",
+        "outputId": "c1e16e6f-7fd0-406d-f61f-8bfd163233dd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0.]], dtype=torch.float64)\n",
+            "<class 'torch.Tensor'>\n",
+            "[[0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]]\n",
+            "<class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensor类型的运算\n",
+        "# add\n",
+        "x = torch.tensor([1,2,3])\n",
+        "y = torch.tensor([9,8,7])\n",
+        "z1 = torch.empty(3)\n",
+        "torch.add(x,y,out=z1)#调用torch的add方法,其实就是两个tensor对象对应的元素相加\n",
+        "print(z1)\n",
+        "z2 = torch.add(x,y)#调用torch的add方法,其实就是两个tensor对象对应的元素相加\n",
+        "print(z2)\n",
+        "z = x+y #直接进行相加,其实就是两个tensor对象对应的元素相加\n",
+        "print(z)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lwNIWwubdJpX",
+        "outputId": "bd434f8c-c11e-4dc5-b4c1-c8aa4067efe3"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([10., 10., 10.])\n",
+            "tensor([10, 10, 10])\n",
+            "tensor([10, 10, 10])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#subtract\n",
+        "res = x - y\n",
+        "print(res)\n",
+        "res = torch.subtract(x,y)\n",
+        "print(res)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1AEEXGR6eTwH",
+        "outputId": "176a2713-a581-4a1b-9d58-9346a98c49ad"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([-8, -6, -4])\n",
+            "tensor([-8, -6, -4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# division\n",
+        "res = torch.true_divide(x,y)\n",
+        "print(res)\n",
+        "res = x/y\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cdgKHpunejC3",
+        "outputId": "d4b5736d-677f-4301-91cc-e15fc2715d23"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.1111, 0.2500, 0.4286])\n",
+            "tensor([0.1111, 0.2500, 0.4286])\n"
+          ]
+        }
       ]
     },
     {
