使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMRdQ1eNo76VDdNKFqQlLnF",
+      "authorship_tag": "ABX9TyNIcjwoiNLGSbI6qr8SDAzT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,12 +253,128 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 上面的运算都不是原地操作,他们会返回新的tensor\n",
+        "# 下面我们来学习原地操作这些函数都是带_的\n",
+        "# 1.add_()\n",
+        "t = torch.zeros(3)\n",
+        "t.add_(x)\n",
+        "# print(t)\n",
+        "t += x # t = t + x\n",
+        "# print(t)\n",
+        "\n",
+        "# 2.subtract_()\n",
+        "t.subtract_(x)\n",
+        "# print(t)\n",
+        "t -= x\n",
+        "# print(t)\n",
+        "\n",
+        "# 3.divide_()\n",
+        "t1 = torch.tensor([2,4,6], dtype=torch.float32) # 奇怪,这里如果不把数据类型改为float,会报错\n",
+        "t1.divide_(x)\n",
+        "print(t1)"
+      ],
       "metadata": {
-        "id": "VY8CKr32kATV"
+        "id": "VY8CKr32kATV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b28b0937-b53b-427a-ebd1-d0820c2c14f7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([2., 2., 2.])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 指数操作\n",
+        "# 写法1\n",
+        "# cub = x.pow(3)\n",
+        "# print(cub)\n",
+        "# 写法2\n",
+        "cub = x**3\n",
+        "print(cub)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sODF_JROh48B",
+        "outputId": "5ca41f96-7fb4-448e-febc-4c0ae9637bbb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 1,  8, 27])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensor对象的比较\n",
+        "print(x>0) # tensor([True, True, True]) 一个tensor和一个数字比较,也就是把这个tensor对象里面的所有元素都和这个数字比较,返回值是一个又布尔值组成的tensor\n",
+        "# 两个tensor对象比较,也就是他们对应位置的元素的比较,(这两个tensor的形状必须完全相同)\n",
+        "print(x<y) # tensor([True, True, True])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QqJlKhkRiyq_",
+        "outputId": "598436d3-158e-4d87-91be-9612a70691fb"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([True, True, True])\n",
+            "tensor([True, True, True])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#矩阵乘法,要做矩阵乘法,第一个矩阵的列数需要等于第二个矩阵的行数,然后结果的行数是第一个矩阵的行数,结果的列数是第二个矩阵的列数\n",
+        "x1 = torch.rand((2,5))\n",
+        "x2 = torch.rand((5,3))\n",
+        "x3 = torch.mm(x1,x2)\n",
+        "print(x3) # 是一个2行3列的tensor(是矩阵来的)tensor([[1.6750, 1.6855, 1.4011],[1.3710, 1.0602, 0.9070]])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1YDnHj5sjhDI",
+        "outputId": "039f43db-4277-4189-8da4-7db33dd09d23"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1.6750, 1.6855, 1.4011],\n",
+            "        [1.3710, 1.0602, 0.9070]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
