使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNIcjwoiNLGSbI6qr8SDAzT",
+      "authorship_tag": "ABX9TyONbPt2ZchLJR67hqGM4Ynq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kennycaiguo/LearnPytorchWithColab/blob/main/torch_tutorial_lesson1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kennycaiguo/-LearnPytorchWithColab/blob/main/torch_tutorial_lesson1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "16IXUb4NLIvw",
-        "outputId": "f5f22231-ad2c-45c9-8418-31de90ead421"
+        "outputId": "286a0319-3869-4960-da17-f40ba0268bfa"
       },
       "outputs": [
         {
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oFvEs8zRcKDn",
-        "outputId": "c1e16e6f-7fd0-406d-f61f-8bfd163233dd"
+        "outputId": "31222511-42ce-494f-9fd3-42f4b833f640"
       },
       "execution_count": 2,
       "outputs": [
@@ -180,7 +180,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lwNIWwubdJpX",
-        "outputId": "bd434f8c-c11e-4dc5-b4c1-c8aa4067efe3"
+        "outputId": "fcc7ece2-a858-4da9-8e19-43e4b08b3178"
       },
       "execution_count": 3,
       "outputs": [
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1AEEXGR6eTwH",
-        "outputId": "176a2713-a581-4a1b-9d58-9346a98c49ad"
+        "outputId": "0ce7a099-f4a0-40c3-e2a3-d28771e9e21b"
       },
       "execution_count": 4,
       "outputs": [
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cdgKHpunejC3",
-        "outputId": "d4b5736d-677f-4301-91cc-e15fc2715d23"
+        "outputId": "32dc4b56-441f-4327-8c29-1cb366a87b21"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,9 +279,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b28b0937-b53b-427a-ebd1-d0820c2c14f7"
+        "outputId": "c6ece960-a9be-4299-c7fc-9c69336f0bc1"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,9 +308,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sODF_JROh48B",
-        "outputId": "5ca41f96-7fb4-448e-febc-4c0ae9637bbb"
+        "outputId": "4e1e21cb-cbb3-4b2b-8e8d-93161867d3d0"
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QqJlKhkRiyq_",
-        "outputId": "598436d3-158e-4d87-91be-9612a70691fb"
+        "outputId": "cdbc4fc3-6f62-447e-9d67-12840c3ee272"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,15 +354,216 @@
         "#矩阵乘法,要做矩阵乘法,第一个矩阵的列数需要等于第二个矩阵的行数,然后结果的行数是第一个矩阵的行数,结果的列数是第二个矩阵的列数\n",
         "x1 = torch.rand((2,5))\n",
         "x2 = torch.rand((5,3))\n",
-        "x3 = torch.mm(x1,x2)\n",
-        "print(x3) # 是一个2行3列的tensor(是矩阵来的)tensor([[1.6750, 1.6855, 1.4011],[1.3710, 1.0602, 0.9070]])\n"
+        "x3 = torch.mm(x1,x2) #矩阵乘法,方法1\n",
+        "print(x3) # 是一个2行3列的tensor(是矩阵来的)tensor([[1.6750, 1.6855, 1.4011],[1.3710, 1.0602, 0.9070]])\n",
+        "x4 = x1.mm(x2) # 矩阵乘法,写法2\n",
+        "print(x4)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1YDnHj5sjhDI",
-        "outputId": "039f43db-4277-4189-8da4-7db33dd09d23"
+        "outputId": "6da751c3-c08e-4295-e903-7747dff01f0e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1.0695, 0.8425, 1.3662],\n",
+            "        [2.0211, 2.2844, 2.2732]])\n",
+            "tensor([[1.0695, 0.8425, 1.3662],\n",
+            "        [2.0211, 2.2844, 2.2732]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 矩阵的幂运算\n",
+        "matrix = torch.rand(5,5)\n",
+        "matrix_exp = matrix.matrix_power(3)\n",
+        "print(matrix_exp)\n",
+        "matrix_exp2 = matrix**3 # 这种写法得到的结果和上面不一样!!!\n",
+        "print(matrix_exp2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N4K8R8CvLDqc",
+        "outputId": "db669332-b467-4256-9869-c6ef37573059"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[3.8743, 3.8256, 5.1538, 4.0212, 3.6105],\n",
+            "        [4.6265, 4.5152, 6.1594, 4.7186, 4.4253],\n",
+            "        [6.2076, 6.1248, 8.4498, 6.4324, 5.9229],\n",
+            "        [5.3377, 5.3127, 7.3359, 5.5942, 5.0534],\n",
+            "        [3.5366, 3.4530, 4.7783, 3.6131, 3.4238]])\n",
+            "tensor([[4.8420e-02, 1.1302e-01, 7.1676e-01, 3.9025e-04, 1.2646e-01],\n",
+            "        [9.9979e-02, 4.8740e-03, 3.4420e-01, 2.0070e-01, 9.3489e-01],\n",
+            "        [3.1797e-01, 6.6804e-01, 9.2563e-01, 5.5308e-01, 4.5056e-02],\n",
+            "        [7.0040e-01, 4.1553e-01, 1.3547e-01, 3.6260e-01, 1.8881e-01],\n",
+            "        [2.7754e-02, 3.2511e-02, 2.0154e-01, 1.9822e-01, 2.2404e-02]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 两个tensor对应位的元素相乘\n",
+        "res = x * y  #[1*9,2*8,3*7]\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UPjq15oQL1hb",
+        "outputId": "3e0c8916-a9e3-4e82-99ab-233f26e8179d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 9, 16, 21])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensor矩阵的点乘\n",
+        "dot_res = torch.dot(x,y) # [1*9 + 2*8 + 3*7]\n",
+        "print(dot_res)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1LKUQ6GTMUeB",
+        "outputId": "c5e83952-adb8-4a4b-f72e-3ad4df955ea7"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(46)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#批量矩阵乘法,torch.bmm()\n",
+        "batch = 32\n",
+        "n = 10\n",
+        "m = 20\n",
+        "p = 30\n",
+        "\n",
+        "tensor1 = torch.rand((batch,n,m))\n",
+        "tensor2 = torch.rand((batch,m,p))\n",
+        "out_bmm = torch.bmm(tensor1,tensor2) # (batch,n,p)\n",
+        "print(out_bmm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tjST4SaBM-8F",
+        "outputId": "9e7cfdae-ec87-4c91-fe71-6fdf24a3aeb8"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[5.0408, 3.9031, 4.3576,  ..., 3.0568, 4.7929, 3.2972],\n",
+            "         [5.4397, 4.6825, 5.2673,  ..., 4.2250, 6.7470, 4.9432],\n",
+            "         [5.7779, 5.2390, 6.1961,  ..., 4.2946, 6.6419, 4.6348],\n",
+            "         ...,\n",
+            "         [5.6094, 5.4529, 4.6194,  ..., 4.2911, 7.2305, 4.8028],\n",
+            "         [4.5664, 3.9362, 4.0528,  ..., 2.8152, 4.8406, 4.0744],\n",
+            "         [5.3715, 4.9994, 4.9218,  ..., 3.1238, 5.8491, 3.8810]],\n",
+            "\n",
+            "        [[5.4019, 6.2067, 4.0780,  ..., 3.7039, 5.9432, 4.9837],\n",
+            "         [4.8032, 4.9164, 3.5576,  ..., 3.3919, 4.9504, 4.4352],\n",
+            "         [4.5536, 5.2467, 2.8115,  ..., 3.5215, 4.5710, 5.0998],\n",
+            "         ...,\n",
+            "         [5.0320, 5.1583, 3.5752,  ..., 3.9860, 5.5345, 4.1524],\n",
+            "         [5.5878, 4.9522, 3.5586,  ..., 3.6543, 5.0998, 5.1382],\n",
+            "         [6.9206, 6.4273, 5.2578,  ..., 4.3830, 6.3454, 6.4311]],\n",
+            "\n",
+            "        [[5.5481, 5.7331, 5.8435,  ..., 6.2551, 6.0613, 5.8118],\n",
+            "         [4.6012, 4.6135, 5.4786,  ..., 5.5483, 4.5751, 4.7466],\n",
+            "         [5.3829, 5.4369, 6.3903,  ..., 5.8481, 5.2942, 5.4035],\n",
+            "         ...,\n",
+            "         [5.6147, 5.2690, 6.2224,  ..., 5.5546, 6.0509, 5.4103],\n",
+            "         [3.8110, 4.0156, 4.3282,  ..., 3.8938, 4.1403, 3.9480],\n",
+            "         [3.7848, 3.7913, 4.5239,  ..., 4.7616, 4.0632, 4.1659]],\n",
+            "\n",
+            "        ...,\n",
+            "\n",
+            "        [[4.9758, 4.5890, 3.9968,  ..., 6.6234, 6.1444, 5.9582],\n",
+            "         [4.0341, 4.0102, 2.4805,  ..., 5.0323, 4.2445, 3.7130],\n",
+            "         [4.0866, 4.2846, 3.8068,  ..., 5.8253, 6.1755, 5.4156],\n",
+            "         ...,\n",
+            "         [3.2997, 3.9870, 2.5731,  ..., 5.2068, 3.7495, 4.7957],\n",
+            "         [2.9801, 3.6633, 2.3229,  ..., 4.2407, 3.6192, 4.4751],\n",
+            "         [4.4090, 4.4263, 3.4324,  ..., 6.9129, 6.1832, 5.8481]],\n",
+            "\n",
+            "        [[6.0639, 5.6394, 6.2757,  ..., 6.6451, 5.4768, 6.3877],\n",
+            "         [4.5018, 4.7597, 4.4842,  ..., 5.0602, 4.5586, 4.7925],\n",
+            "         [6.8444, 6.8976, 7.2292,  ..., 6.9386, 7.3679, 6.7968],\n",
+            "         ...,\n",
+            "         [5.5029, 5.2088, 5.1946,  ..., 4.5418, 4.9462, 5.4302],\n",
+            "         [4.7279, 4.9316, 5.1714,  ..., 4.8125, 4.5497, 4.7967],\n",
+            "         [6.1430, 6.2513, 6.5615,  ..., 7.1010, 6.0370, 6.0901]],\n",
+            "\n",
+            "        [[3.8027, 3.9272, 3.5863,  ..., 4.4341, 4.4401, 5.5370],\n",
+            "         [5.0237, 5.7133, 4.4877,  ..., 6.4902, 5.3654, 6.5938],\n",
+            "         [4.9156, 5.6376, 4.7998,  ..., 6.5584, 4.5758, 6.2084],\n",
+            "         ...,\n",
+            "         [4.3824, 4.6802, 3.7139,  ..., 4.2614, 4.6543, 5.3038],\n",
+            "         [4.6718, 5.4557, 4.5789,  ..., 6.1320, 5.1302, 6.0291],\n",
+            "         [3.5857, 4.7998, 4.4991,  ..., 4.9675, 3.6726, 4.6428]]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 广播\n",
+        "x1 = torch.rand((5,5))\n",
+        "x2 = torch.rand((1,5))\n",
+        "z = x1 - x2\n",
+        "print(z)\n",
+        "z = x1 ** x2\n",
+        "print(z)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ii-bi4thOB_H",
+        "outputId": "963a8e6a-f936-4cec-8133-17491ef8fe5b"
       },
       "execution_count": 17,
       "outputs": [
@@ -370,8 +571,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[1.6750, 1.6855, 1.4011],\n",
-            "        [1.3710, 1.0602, 0.9070]])\n"
+            "tensor([[-0.0558, -0.6274,  0.1934, -0.2140, -0.3501],\n",
+            "        [-0.1267, -0.5197,  0.0428,  0.1047,  0.1921],\n",
+            "        [-0.0981,  0.1107,  0.4384,  0.4137, -0.1850],\n",
+            "        [ 0.0504,  0.2233,  0.7067,  0.5599, -0.2856],\n",
+            "        [-0.1940, -0.4505,  0.4669,  0.0871,  0.1908]])\n",
+            "tensor([[0.6567, 0.1309, 0.9627, 0.4446, 0.4903],\n",
+            "        [0.6004, 0.2859, 0.9349, 0.7701, 0.9382],\n",
+            "        [0.6239, 0.8509, 0.9809, 0.9025, 0.6390],\n",
+            "        [0.7312, 0.9314, 0.9922, 0.9493, 0.5502],\n",
+            "        [0.5400, 0.3659, 0.9824, 0.7603, 0.9373]])\n"
           ]
         }
       ]
