--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyONbPt2ZchLJR67hqGM4Ynq",
+      "authorship_tag": "ABX9TyMo36sAm2j8LpbXmtJTWvbV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -581,6 +581,63 @@
             "        [0.6239, 0.8509, 0.9809, 0.9025, 0.6390],\n",
             "        [0.7312, 0.9314, 0.9922, 0.9493, 0.5502],\n",
             "        [0.5400, 0.3659, 0.9824, 0.7603, 0.9373]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 一些有用的tensor操作\n",
+        "total = torch.sum(x) # 求和\n",
+        "# print(total) # tensor(6)\n",
+        "#最大值\n",
+        "val,index = torch.max(x,dim=0)\n",
+        "# print(val,index) # tensor(3) tensor(2)\n",
+        "#最小值\n",
+        "val,index = torch.min(x,dim=0)\n",
+        "# print(val,index) # tensor(1) tensor(0)\n",
+        "#绝对值\n",
+        "abs_val = torch.abs(x) # 注意:这个方法没有dim参数\n",
+        "# print(abs_val)\n",
+        "# 获取最大的元素并且返回他的索引\n",
+        "mx_idx = torch.argmax(x) # 或者: mx_idx = torch.argmax(x,dim=0)\n",
+        "# print(mx_idx)\n",
+        "# 获取最小的元素并且返回他的索引\n",
+        "mn_idx = torch.argmin(x) # 或者: mx_idx = torch.argmin(x,dim=0)\n",
+        "# print(mn_idx)\n",
+        "# 均值\n",
+        "mean = torch.mean(x.float(),dim=0)\n",
+        "print(mean)\n",
+        "\n",
+        "# 判断两个tensor是否相等\n",
+        "ret = torch.eq(x,y)\n",
+        "# print(ret)\n",
+        "# 判断两个tensor是否不等\n",
+        "ret = torch.ne(x,y)\n",
+        "# print(ret)\n",
+        "\n",
+        "#排序\n",
+        "sorted_y,indices = torch.sort(y,dim=0,descending=False)\n",
+        "print(sorted_y)\n",
+        "print(indices)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZZ5l7Qz6P4pt",
+        "outputId": "49c8d449-7c55-4016-864e-c74c0fcaab3c"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(2.)\n",
+            "tensor([7, 8, 9])\n",
+            "tensor([2, 1, 0])\n"
           ]
         }
       ]
