--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMo36sAm2j8LpbXmtJTWvbV",
+      "authorship_tag": "ABX9TyOjXa042hkeMFT+NUMxbFXl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -592,23 +592,23 @@
         "total = torch.sum(x) # 求和\n",
         "# print(total) # tensor(6)\n",
         "#最大值\n",
-        "val,index = torch.max(x,dim=0)\n",
+        "val,index = torch.max(x,dim=0) # 也可以x.max(dim=0)\n",
         "# print(val,index) # tensor(3) tensor(2)\n",
         "#最小值\n",
-        "val,index = torch.min(x,dim=0)\n",
+        "val,index = torch.min(x,dim=0) # 也可以x.min(dim=0)\n",
         "# print(val,index) # tensor(1) tensor(0)\n",
         "#绝对值\n",
-        "abs_val = torch.abs(x) # 注意:这个方法没有dim参数\n",
+        "abs_val = torch.abs(x) # 注意:这个方法没有dim参数,也可以x.abs()\n",
         "# print(abs_val)\n",
         "# 获取最大的元素并且返回他的索引\n",
-        "mx_idx = torch.argmax(x) # 或者: mx_idx = torch.argmax(x,dim=0)\n",
+        "mx_idx = torch.argmax(x) # 或者: mx_idx = torch.argmax(x,dim=0)也可以x.argmax(dim=0)\n",
         "# print(mx_idx)\n",
         "# 获取最小的元素并且返回他的索引\n",
         "mn_idx = torch.argmin(x) # 或者: mx_idx = torch.argmin(x,dim=0)\n",
         "# print(mn_idx)\n",
         "# 均值\n",
         "mean = torch.mean(x.float(),dim=0)\n",
-        "print(mean)\n",
+        "# print(mean)\n",
         "\n",
         "# 判断两个tensor是否相等\n",
         "ret = torch.eq(x,y)\n",
@@ -618,29 +618,105 @@
         "# print(ret)\n",
         "\n",
         "#排序\n",
-        "sorted_y,indices = torch.sort(y,dim=0,descending=False)\n",
-        "print(sorted_y)\n",
-        "print(indices)"
+        "sorted_y,indices = torch.sort(y,dim=0,descending=False) #升序排列\n",
+        "# print(sorted_y)\n",
+        "# print(indices)\n",
+        "\n",
+        "#clamp(data,min=0) 如果data里面的元素小于这个min的值,就会把他们设置为min值,他也有一个max参数,如果data的元素大于这个max,就会强制把它设置为max\n",
+        "data = torch.tensor([-2,-1,0,2,4,5])\n",
+        "data2 = torch.clamp(data,min=0) # tensor([0, 0, 0, 2, 4, 5])\n",
+        "print(data2)\n",
+        "data = torch.tensor([-2,-1,0,2,4,5,7,8,9])\n",
+        "data2 = torch.clamp(data,min=0,max=7) # tensor([0, 0, 0, 2, 4, 5, 7, 7, 7])\n",
+        "print(data2)\n",
+        "\n",
+        "# any()只要有一个元素符合条件,就会返回True\n",
+        "res = torch.any(data)\n",
+        "# print(res) # tensor(True)\n",
+        "# all()只有所有的元素符合条件,才返回True\n",
+        "res = torch.all(data)\n",
+        "print(res) # tensor(False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZZ5l7Qz6P4pt",
-        "outputId": "49c8d449-7c55-4016-864e-c74c0fcaab3c"
+        "outputId": "3bb7befd-5b53-4649-b62b-e071749ee71c"
       },
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(2.)\n",
-            "tensor([7, 8, 9])\n",
-            "tensor([2, 1, 0])\n"
+            "tensor([0, 0, 0, 2, 4, 5])\n",
+            "tensor([0, 0, 0, 2, 4, 5, 7, 7, 7])\n",
+            "tensor(False)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 索引操作\n",
+        "batch_size = 10\n",
+        "features = 25\n",
+        "t = torch.rand((batch_size,features))\n",
+        "# print(t[0].shape) # torch.Size([25])\n",
+        "# print(t[:,0].shape) # torch.Size([10])\n",
+        "# print(t[2,0:10]) # tensor([0.3433, 0.5274, 0.5691, 0.8528, 0.2644, 0.2485, 0.0693, 0.1275, 0.3163,0.5014]) 得到一个1行10列的tensor\n",
+        "\n",
+        "t[0,0] = 10 #修改第一个元素的值\n",
+        "# print(t)\n",
+        "\n",
+        "# 用索引选取你需要的元素\n",
+        "x = torch.arange(10)\n",
+        "# print(x)\n",
+        "indices = [2,5,8]\n",
+        "# print(x[indices]) # tensor([2, 5, 8])\n",
+        "\n",
+        "# 可以指定行数和列数,这个有点复杂需要慢慢理解\n",
+        "x = torch.rand((3,5))\n",
+        "print(x)\n",
+        "rows = torch.tensor([1,0]) # 表示需要的行索引是1和0\n",
+        "cols = torch.tensor([4,0]) # 表示需要的列索引是4和0\n",
+        "# print(x[rows,cols]) # 根据位置的配对,获取元素x[1,4]和x[0,0]\n",
+        "\n",
+        "# 条件索引\n",
+        "x = torch.arange(10)\n",
+        "print(x[(x<2)|(x>8)]) # tensor([0, 1, 9])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mEzNSxttbO8g",
+        "outputId": "553ed21f-657c-4763-e8d5-508323825d6e"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.8158, 0.5149, 0.2647, 0.4535, 0.1050],\n",
+            "        [0.3884, 0.1541, 0.5291, 0.4398, 0.9768],\n",
+            "        [0.3795, 0.9225, 0.3936, 0.8032, 0.8027]])\n",
+            "tensor([0, 1, 9])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-ha7E_1zjdUX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
