使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOjXa042hkeMFT+NUMxbFXl",
+      "authorship_tag": "ABX9TyP9q5uPC4kFfmn/aRhAOywC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -682,7 +682,7 @@
         "print(x)\n",
         "rows = torch.tensor([1,0]) # 表示需要的行索引是1和0\n",
         "cols = torch.tensor([4,0]) # 表示需要的列索引是4和0\n",
-        "# print(x[rows,cols]) # 根据位置的配对,获取元素x[1,4]和x[0,0]\n",
+        "print(x[rows,cols]) # 根据位置的配对,获取元素x[1,4]和x[0,0]\n",
         "\n",
         "# 条件索引\n",
         "x = torch.arange(10)\n",
@@ -693,17 +693,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mEzNSxttbO8g",
-        "outputId": "553ed21f-657c-4763-e8d5-508323825d6e"
+        "outputId": "90f42c44-77df-4869-dedc-4e386eb2bce9"
       },
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[0.8158, 0.5149, 0.2647, 0.4535, 0.1050],\n",
-            "        [0.3884, 0.1541, 0.5291, 0.4398, 0.9768],\n",
-            "        [0.3795, 0.9225, 0.3936, 0.8032, 0.8027]])\n",
+            "tensor([[6.5279e-01, 8.0114e-02, 5.7237e-01, 1.2821e-02, 9.8498e-01],\n",
+            "        [9.6390e-01, 6.3847e-02, 3.2861e-01, 1.9199e-04, 4.3264e-02],\n",
+            "        [2.1017e-01, 9.9496e-01, 3.9334e-01, 2.0915e-01, 9.1975e-01]])\n",
+            "tensor([0.0433, 0.6528])\n",
             "tensor([0, 1, 9])\n"
           ]
         }
