使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP9q5uPC4kFfmn/aRhAOywC",
+      "authorship_tag": "ABX9TyM0/qXYHiIQhsGQhUv6rMxr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -685,27 +685,44 @@
         "print(x[rows,cols]) # 根据位置的配对,获取元素x[1,4]和x[0,0]\n",
         "\n",
         "# 条件索引\n",
+        "# 1.获取所有小于2或者大于8的元素\n",
         "x = torch.arange(10)\n",
-        "print(x[(x<2)|(x>8)]) # tensor([0, 1, 9])\n"
+        "# print(x[(x<2)|(x>8)]) # tensor([0, 1, 9])\n",
+        "# 2.获取所有能够被2整除的元素\n",
+        "# print(x[x.remainder(2)==0]) # tensor([0, 2, 4, 6, 8]\n",
+        "\n",
+        "# 其他有用的函数\n",
+        "# where函数,可以用来根据条件来改变元素的值\n",
+        "print(torch.where(x>5,x,x*2)) # 找出所有小于5的元素并且把他们变为原来的2倍,注意他的用法\n",
+        "# 去除重复元素,使用unique()函数\n",
+        "t2 = torch.tensor([0,0,1,1,2,2,2,3,3,4,4,4,5])\n",
+        "print(t2.unique()) # tensor([0, 1, 2, 3, 4, 5])\n",
+        "# ndimension()获取tensor的维度\n",
+        "print(t2.ndimension()) # 1\n",
+        "#numel()获取tensor的元素个数\n",
+        "print(t2.numel()) # 13,numel => number of elements\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mEzNSxttbO8g",
-        "outputId": "90f42c44-77df-4869-dedc-4e386eb2bce9"
+        "outputId": "0fdb1b1c-836e-4f4c-b055-899b308f251b"
       },
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[6.5279e-01, 8.0114e-02, 5.7237e-01, 1.2821e-02, 9.8498e-01],\n",
-            "        [9.6390e-01, 6.3847e-02, 3.2861e-01, 1.9199e-04, 4.3264e-02],\n",
-            "        [2.1017e-01, 9.9496e-01, 3.9334e-01, 2.0915e-01, 9.1975e-01]])\n",
-            "tensor([0.0433, 0.6528])\n",
-            "tensor([0, 1, 9])\n"
+            "tensor([[0.5209, 0.4949, 0.6159, 0.7047, 0.2476],\n",
+            "        [0.0867, 0.8711, 0.7905, 0.9694, 0.2340],\n",
+            "        [0.5102, 0.4547, 0.5752, 0.4268, 0.3261]])\n",
+            "tensor([0.2340, 0.5209])\n",
+            "tensor([ 0,  2,  4,  6,  8, 10,  6,  7,  8,  9])\n",
+            "tensor([0, 1, 2, 3, 4, 5])\n",
+            "1\n",
+            "13\n"
           ]
         }
       ]
