使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM0/qXYHiIQhsGQhUv6rMxr",
+      "authorship_tag": "ABX9TyOtPc4Jbqgt1n5MJ4wDKoh2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -723,6 +723,39 @@
             "tensor([0, 1, 2, 3, 4, 5])\n",
             "1\n",
             "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensor修改形状,有2个函数可以使用view()函数和reshape()函数\n",
+        "x = torch.arange(9)\n",
+        "x_3x3 = x.view(3,3)\n",
+        "print(x_3x3)\n",
+        "x_3x3 = x.reshape(3,3)\n",
+        "print(x_3x3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SLFyoKBYsrwl",
+        "outputId": "ef1bac80-b0ba-48f8-9b6a-3c3db854d4e6"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0, 1, 2],\n",
+            "        [3, 4, 5],\n",
+            "        [6, 7, 8]])\n",
+            "tensor([[0, 1, 2],\n",
+            "        [3, 4, 5],\n",
+            "        [6, 7, 8]])\n"
           ]
         }
       ]
