使用 Colab 创建而成

--- a/torch_tutorial_lesson1.ipynb
+++ b/torch_tutorial_lesson1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOtPc4Jbqgt1n5MJ4wDKoh2",
+      "authorship_tag": "ABX9TyP75fAqVvFnmqcX1NSvjwoi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
         "id": "oFvEs8zRcKDn",
         "outputId": "31222511-42ce-494f-9fd3-42f4b833f640"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
         "id": "lwNIWwubdJpX",
         "outputId": "fcc7ece2-a858-4da9-8e19-43e4b08b3178"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
         "id": "1AEEXGR6eTwH",
         "outputId": "0ce7a099-f4a0-40c3-e2a3-d28771e9e21b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "id": "cdgKHpunejC3",
         "outputId": "32dc4b56-441f-4327-8c29-1cb366a87b21"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         },
         "outputId": "c6ece960-a9be-4299-c7fc-9c69336f0bc1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "id": "sODF_JROh48B",
         "outputId": "4e1e21cb-cbb3-4b2b-8e8d-93161867d3d0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         "id": "QqJlKhkRiyq_",
         "outputId": "cdbc4fc3-6f62-447e-9d67-12840c3ee272"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
         "id": "1YDnHj5sjhDI",
         "outputId": "6da751c3-c08e-4295-e903-7747dff01f0e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +397,7 @@
         "id": "N4K8R8CvLDqc",
         "outputId": "db669332-b467-4256-9869-c6ef37573059"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "id": "UPjq15oQL1hb",
         "outputId": "3e0c8916-a9e3-4e82-99ab-233f26e8179d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         "id": "1LKUQ6GTMUeB",
         "outputId": "c5e83952-adb8-4a4b-f72e-3ad4df955ea7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "tjST4SaBM-8F",
         "outputId": "9e7cfdae-ec87-4c91-fe71-6fdf24a3aeb8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +565,7 @@
         "id": "Ii-bi4thOB_H",
         "outputId": "963a8e6a-f936-4cec-8133-17491ef8fe5b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
         "id": "ZZ5l7Qz6P4pt",
         "outputId": "3bb7befd-5b53-4649-b62b-e071749ee71c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
         "id": "mEzNSxttbO8g",
         "outputId": "0fdb1b1c-836e-4f4c-b055-899b308f251b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,21 +730,61 @@
     {
       "cell_type": "code",
       "source": [
-        "# tensor修改形状,有2个函数可以使用view()函数和reshape()函数\n",
+        "# tensor修改形状,有2个函数可以使用view()函数和reshape()函数,reshape()函数比view要安全.\n",
         "x = torch.arange(9)\n",
         "x_3x3 = x.view(3,3)\n",
         "print(x_3x3)\n",
         "x_3x3 = x.reshape(3,3)\n",
-        "print(x_3x3)"
+        "print(x_3x3)\n",
+        "\n",
+        "# 转置函数t(),就是行列互换\n",
+        "y = x_3x3.t()\n",
+        "print(y)\n",
+        "# print(y.view(9)) # 会报错\n",
+        "print(y.reshape(9)) # tensor([0, 3, 6, 1, 4, 7, 2, 5, 8]),reshape()函数比view要安全.\n",
+        "# 如果你非要使用view,你需要先调用contiguous()函数\n",
+        "print(y.contiguous().view(9)) # tensor([0, 3, 6, 1, 4, 7, 2, 5, 8])\n",
+        "\n",
+        "#cat()函数\n",
+        "x1 = torch.rand((2,5))\n",
+        "x2 = torch.rand((2,5))\n",
+        "print(torch.cat((x1,x2),dim=0).shape) # torch.Size([4, 5])\n",
+        "print(torch.cat((x1,x2),dim=1).shape) # torch.Size([2, 10])\n",
+        "\n",
+        "z = x1.view(-1) # -1表示自动计算\n",
+        "print(z.shape) # torch.Size([10])\n",
+        "\n",
+        "batch = 64\n",
+        "x = torch.rand((batch,2,5))\n",
+        "z = x.view(batch,-1)\n",
+        "print(z.shape) # torch.Size([64, 10])\n",
+        "\n",
+        "#permute()函数,多维tensor的转置\n",
+        "z = x.permute(0,2,1)\n",
+        "print(z.shape) # torch.Size([64, 5, 2])\n",
+        "\n",
+        "#unsqueeze()函数,将1维矩阵变为二维矩阵\n",
+        "x = torch.arange(10)\n",
+        "print(x.shape) # torch.Size([10])\n",
+        "print(x.unsqueeze(0).shape) # torch.Size([1, 10]) # 1行10列\n",
+        "print(x.unsqueeze(1).shape) # torch.Size([10, 1]) # 10行1列\n",
+        "\n",
+        "# unsqueeze()函数可以进行链式调用\n",
+        "x = torch.arange(10).unsqueeze(0).unsqueeze(1) # 1x1x10\n",
+        "print(x.shape) # torch.Size([1, 1, 10])\n",
+        "\n",
+        "# squeeze()函数是unsqueeze()的逆操作\n",
+        "z = x.squeeze(0)\n",
+        "print(z.shape) #torch.Size([1, 10])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SLFyoKBYsrwl",
-        "outputId": "ef1bac80-b0ba-48f8-9b6a-3c3db854d4e6"
+        "outputId": "4910487c-2e82-4720-bd7f-3e8a81c2433b"
       },
-      "execution_count": 44,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +795,22 @@
             "        [6, 7, 8]])\n",
             "tensor([[0, 1, 2],\n",
             "        [3, 4, 5],\n",
-            "        [6, 7, 8]])\n"
+            "        [6, 7, 8]])\n",
+            "tensor([[0, 3, 6],\n",
+            "        [1, 4, 7],\n",
+            "        [2, 5, 8]])\n",
+            "tensor([0, 3, 6, 1, 4, 7, 2, 5, 8])\n",
+            "tensor([0, 3, 6, 1, 4, 7, 2, 5, 8])\n",
+            "torch.Size([4, 5])\n",
+            "torch.Size([2, 10])\n",
+            "torch.Size([10])\n",
+            "torch.Size([64, 10])\n",
+            "torch.Size([64, 5, 2])\n",
+            "torch.Size([10])\n",
+            "torch.Size([1, 10])\n",
+            "torch.Size([10, 1])\n",
+            "torch.Size([1, 1, 10])\n",
+            "torch.Size([1, 10])\n"
           ]
         }
       ]
