使用 Colab 创建而成

--- a/torch_tutorial_lesson2_nn.ipynb
+++ b/torch_tutorial_lesson2_nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNDXpMN6gOgWk6Jj7A/a3CT",
+      "authorship_tag": "ABX9TyPUnCQnl3g9GaoH486N3zDv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,9 +82,35 @@
         "#训练模型\n",
         "for epoch in range(num_epochs):\n",
         "  for batch_idx,(data,targets) in enumerate(train_loader):\n",
+        "    # 把数据发送到cuda(如果可用)\n",
         "    data=data.to(device=device)\n",
         "    targets=targets.to(device=device)\n",
         "    # print(data.shape)\n",
+        "    # get the correct shape\n",
+        "    data = data.reshape(data.shape[0],-1)\n",
+        "    # forward\n",
+        "    scores = model(data)\n",
+        "    # loss\n",
+        "    loss = criteron(scores,targets)\n",
+        "    # 反向传播\n",
+        "    optimizer.zero_grad() # 清空优化器的梯度缓存\n",
+        "    loss.backward()\n",
+        "\n",
+        "    #梯度下降炒操作\n",
+        "    optimizer.step()\n",
+        "\n",
+        "#模型验证,检验准确率\n",
+        "def check_accuracy(loader,model):\n",
+        "  num_correct = 0\n",
+        "  num_sample = 0\n",
+        "  model.eval()\n",
+        "\n",
+        "  with torch.no_grad():\n",
+        "    for x,y in loader:\n",
+        "      x = x.to(device=device)\n",
+        "      y = y.to(device=device)\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ]
